--- a/main.css
+++ b/main.css
@@ -1,18 +1,15 @@
-.hijote{
-	border: 15px solid yellow;
-	margin: 15px;
-	width: 260px;
-	height: 260px;
+.bloque {
+	width: 200px;
+	border: 20px solid #FDF733;
+	padding: 20px;
+}
+
+.bloque p {
+	font-size: 1em;
 	text-align: center;
 
 }
-.hijito{
-	border: 15px solid yellow;
-	margin:auto;
-	width: 260px;
-	height: 260px;
-	text-align: left;
-}
-.hijo{
-	padding: 35px;
+
+#dos {
+	margin: 0px auto;
 }
